--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="header">MATTO TUTORS </div>
     
     <nav class="nav">
-        <a href="#">Home</a>
+        <a href="https://admin2stts.github.io/Matto-tutors-/#">Home</a>
         <a href="#">Products</a>
         <a href="#">About Us</a>
         <a href="#">Contact</a>
@@ -137,22 +137,23 @@
         <h2>Past questions</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="https://via.placeholder.com/200" alt="year 1">
+                <img src="https://via.placeholder.com/200" alt="YEAR 1">
                 <h3>MATHS QUESTIONS</h3>
-                <p>Get maths past questions ay the nest price.</p>
+                <p>Get maths past questions at the best price.</p>
                 <button onclick="addToCart('Maths')">READ</button>
             </div>
             <div class="product-card">
-                <img src="https://www.google.com/search?client=ms-android-transsion-infinix-rev2&sca_esv=a702d81326ff13a9&sxsrf=AHTn8zqYcqIPRyT30iCxjz1CKdo6q7s8PQ:1739094296277&q=jamb+maths+past+questions+image&uds=ABqPDvztZD_Nu18FR6tNPw2cK_RRPY0mPO79VtFq02GfUecW8oerxdeepYBQDS9xll8eHZcC6jqomEnNuuTXxDGUt6TnEtLGislFEuSTkydrqva3RwxDRiiuZpgWEdIWNcfnCCLH2I13OQLkVL13UYAtmY24k8x_eOIPLMYD_iGago1f8v2FugE&udm=2&sa=X&ved=2ahUKEwi6sYqOp7aLAxV_VKQEHbmcJXUQxKsJegQICRAB&ictx=0&biw=424&bih=776&dpr=2.55#vhid=GxhtpFC5EmY1YM&vssid=mosaic" alt="Product 2">
+                <img src="https://www.maths past questions"alt=
+ "YEAR 2">
                 <h3>Luxury Watch</h3>
                 <p>Premium watches at the best price.</p>
                 <button onclick="addToCart('Watch')">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/200" alt="Product 3">
-                <h3>Smartphone</h3>
-                <p>Latest model with cutting-edge features.</p>
-                <button onclick="addToCart('Smartphone')">Add to Cart</button>
+                <img src="https://via.placeholder.com/200" alt="YEAR 3">
+                <h3>USE OF ENGLISH</h3>
+                <p>Latest model with all features.</p>
+                <button onclick="addToCart('English')">Add to Cart</button>
             </div>
         </div>
     </div>
@@ -160,11 +161,11 @@
     <div class="contact-section">
         <h2>📞 Contact Us</h2>
         <p>Have questions? Drop your email and we'll reach out.</p>
-        <input type="email" placeholder="emmy@gmail.com">
+        <input type="email" placeholder="kulous10@gmail.com">
         <button>Submit</button>
     </div>
 
-    <footer>© 2025 Business Storefront | All Rights Reserved</footer>
+    <footer>© 2025 MATTO TUTORS | All Rights Reserved</footer>
 
     <script>
         function addToCart(item) {
