--- a/index.html
+++ b/index.html
@@ -127,33 +127,35 @@
     <div class="header">MATTO TUTORS </div>
     
     <nav class="nav">
-        <a href="https://admin2stts.github.io/Matto-tutors-/#">Home</a>
+        <a href="#">Home</a>
         <a href="#">Products</a>
         <a href="#">About Us</a>
         <a href="#">Contact</a>
     </nav>
 
     <div class="container">
-        <h2>Past questions</h2>
+        <h2>PAST QUESTIONS</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="https://via.placeholder.com/200" alt="YEAR 1">
+                <img src="https://via.past questions.com/200"alt=
+ "YEAR 1">
                 <h3>MATHS QUESTIONS</h3>
                 <p>Get maths past questions at the best price.</p>
                 <button onclick="addToCart('Maths')">READ</button>
             </div>
-            <div class="product-card">
-                <img src="https://www.maths past questions"alt=
+            <div class="Maths-card">
+                <img src="https://www.maths.com"alt=
  "YEAR 2">
-                <h3>Luxury Watch</h3>
-                <p>Premium watches at the best price.</p>
-                <button onclick="addToCart('Watch')">Add to Cart</button>
+                <h3>PHYSICS</h3>
+                <p>Get physics past questions at the best price.</p>
+                <button onclick="addToCart('Physics')">STUDY</button>
             </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/200" alt="YEAR 3">
+            <div class="Physics-card">
+                <img src="https://Physics.com/200" alt=
+ "YEAR 3">
                 <h3>USE OF ENGLISH</h3>
                 <p>Latest model with all features.</p>
-                <button onclick="addToCart('English')">Add to Cart</button>
+                <button onclick="addToCart('English')">READ</button>
             </div>
         </div>
     </div>
